Update docker image names

--- a/solution/backend/deployment-v2.yaml
+++ b/solution/backend/deployment-v2.yaml
@@ -20,6 +20,6 @@ spec:
     spec:
       containers:
         - name: backend
-          image: backend:v2.0.0
+          image: hulk18/backend:v2.0.0
           ports:
             - containerPort: 8080
